objects/Opportunity_Plan__c.object
<CustomObject>
    <fields>
        <fullName>WTB_Total__c</fullName>
        <formula>VALUE(LEFT( TEXT(OG_WTB_Q1__c) ,1))+ VALUE(LEFT( TEXT(OG_WTB_Q2__c) ,1)) + VALUE(LEFT( TEXT(OG_WTB_Q3__c) ,1))+ VALUE(LEFT( TEXT(OG_WTB_Q4__c) ,1)) + VALUE(LEFT( TEXT(OG_WTB_Q5__c) ,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Will They Buy Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_will_we_do_different_in_next_Closin__c</fullName>
        <label>What will we do different in next Closin</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>dg_resources__c</fullName>
        <label>DG Resources</label>
        <type>TextArea</type>
    </fields>
    <label>Opportunity Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OP-{00000000}</displayFormat>
        <label>Opportunity Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>